k8s/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: oncall-sla
  labels:
    name: oncall-sla
spec:
  containers:
  - name: oncall-sla
    image: oncall-sla:latest
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
    ports:
      - containerPort: 2112
    volumeMounts:
      - name: oncall-sla-config
        mountPath: /app/config.json
        subPath: oncall-sla.conf
        readOnly: true
