k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oncall-sla-service
spec:
  selector:
    name: oncall-sla
  ports:
  - port: 2112
    targetPort: 2112
